--- a/ffff.html/index.html
+++ b/ffff.html/index.html
@@ -3,107 +3,211 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Online - Tu floristería digital</title>
+    <title>Tienda en línea</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Estilos CSS */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        .cart-icon {
+            position: relative;
         }
-        header {
-            background-color: #4CAF50;
+        .cart-count {
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            background-color: red;
             color: white;
-            padding: 20px;
-            text-align: center;
+            border-radius: 50%;
+            padding: 2px 5px;
+            font-size: 12px;
+            cursor: pointer; /* Cambiado para indicar que es clickeable */
         }
-        nav {
-            background-color: #333;
-            padding: 10px;
-            text-align: center;
+        .card {
+            height: 300px; /* Tamaño uniforme para todas las tarjetas */
         }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-        }
-        nav a:hover {
-            background-color: #4CAF50;
-        }
-        main {
-            padding: 20px;
-        }
-        .product {
-            display: inline-block;
-            width: 300px;
-            margin: 20px;
-            text-align: center;
-        }
-        .product img {
-            width: 200px;
-            height: 200px;
-        }
-        .product h3 {
-            margin-top: 10px;
-        }
-        .product p {
-            margin-top: 5px;
-        }
-        .product button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
+        .card-img-top {
+            height: 150px; /* Ajustar la altura de la imagen */
+            object-fit: cover; /* Mantener la proporción de la imagen */
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Flores Online</h1>
-        <p>Tu floristería digital</p>
+    <header class="bg-success text-white text-center p-4">
+        <div class="container">
+            <h1>Bienvenido a nuestra tienda</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="#" class="btn btn-light">Información</a>
+            <a href="#" class="btn btn-light">Leer más</a>
+        </div>
+        <a href="#" class="cart-icon position-absolute top-0 end-0 p-3" data-bs-toggle="modal" data-bs-target="#cartModal">
+            <i class="fas fa-shopping-cart fa-2x text-white"></i>
+            <span class="cart-count" id="cart-count">0</span>
+        </a>
     </header>
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Catálogo</a>
-        <a href="#">Sobre Nosotros</a>
-        <a href="#">Contacto</a>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <main>
-        <h2>Nuestras Flores</h2>
-        <div class="product">
-            <img src="images/s2.png" alt="Rosa">
-            <h3>Rosa Roja</h3>
-            <p>15.99$</p>
-            <button>Añadir al carrito</button>
+
+    <!-- Productos -->
+    <div class="container mt-5">
+        <h2 class="text-center">Productos</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <img src="images/s2.png" class="card-img-top" alt="Rosa Roja">
+                    <div class="card-body">
+                        <h5 class="card-title">Rosa Roja</h5>
+                        <p class="card-text">15.99$</p>
+                        <button class="btn btn-success" onclick="addToCart('Rosa Roja', 'images/s2.png', 15.99)">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <img src="images/s3.png" class="card-img-top" alt="Tulipán">
+                    <div class="card-body">
+                        <h5 class="card-title">Tulipán</h5>
+                        <p class="card-text">12.99$</p>
+                        <button class="btn btn-success" onclick="addToCart('Tulipán', 'images/s3.png', 12.99)">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <img src="images/s4.png" class="card-img-top" alt="Lirio">
+                    <div class="card-body">
+                        <h5 class="card-title">Lirio</h5>
+                        <p class="card-text">10.99$</p>
+                        <button class="btn btn-success" onclick="addToCart('Lirio', 'images/s4.png', 10.99)">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <img src="images/s5.png" class="card-img-top" alt="Girasol">
+                    <div class="card-body">
+                        <h5 class="card-title">Girasol</h5>
+                        <p class="card-text">8.99$</p>
+                        <button class="btn btn-success" onclick="addToCart('Girasol', 'images/s5.png', 8.99)">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="product">
-            <img src="girasol.jpg" alt="Girasol">
-            <h3>Girasol</h3>
-            <p>10.99$</p>
-            <button>Añadir al carrito</button>
+        <div class="text-center mt-4">
+            <button class="btn btn-primary">Cargar más</button>
         </div>
-        <div class="product">
-            <img src="tulipan.jpg" alt="Tulipán">
-            <h3>Tulipán Amarillo</h3>
-            <p>8.99$</p>
-            <button>Añadir al carrito</button>
+    </div>
+
+    <section class="bg-light text-center py-5">
+        <div class="container">
+            <h2>Qué opinan nuestros clientes</h2>
+            <p>Testimonio de cliente 1</p>
         </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Flores Online. Todos los derechos reservados.</p>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p>&copy; 2024 Tienda en línea. Todos los derechos reservados.</p>
+        </div>
     </footer>
+
+    <!-- Modal del Carrito -->
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cartModalLabel">Carrito de Compras</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="cart-items-container">
+                        <p>No hay productos en el carrito.</p>
+                    </div>
+                    <h6>Opciones de pago:</h6>
+                    <select id="payment-options" class="form-select">
+                        <option value="">Seleccione una opción</option>
+                        <option value="tarjeta">Tarjeta de crédito</option>
+                        <option value="paypal">PayPal</option>
+                        <option value="transferencia">Transferencia bancaria</option>
+                    </select>
+                    <p class="mt-3"><strong>Total a pagar: <span id="total-price">0.00$</span></strong></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" onclick="proceedToPayment()">Proceder al pago</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        let cartCount = 0;
+        let cartItems = [];
+
+        function addToCart(name, image, price) {
+            cartCount++;
+            document.getElementById('cart-count').innerText = cartCount;
+
+            // Añadir el producto al carrito
+            cartItems.push({ name, image, price });
+            alert('Producto añadido al carrito');
+        }
+
+        function showCart() {
+            const cartItemsContainer = document.getElementById('cart-items-container');
+            const totalPriceElement = document.getElementById('total-price');
+            cartItemsContainer.innerHTML = ''; // Limpiar contenido previo
+            let totalPrice = 0;
+
+            if (cartCount === 0) {
+                cartItemsContainer.innerHTML = '<p>No hay productos en el carrito.</p>';
+                totalPriceElement.innerText = '0.00$';
+            } else {
+                cartItems.forEach(item => {
+                    const itemCard = `
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <div class="d-flex align-items-center">
+                                <img src="${item.image}" class="img-thumbnail" alt="${item.name}" style="width: 50px; height: 50px; margin-right: 10px;">
+                                <div>
+                                    <h6>${item.name}</h6>
+                                    <p>${item.price}$</p>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    cartItemsContainer.innerHTML += itemCard;
+                    totalPrice += item.price; // Sumar el precio al total
+                });
+                totalPriceElement.innerText = totalPrice.toFixed(2) + '$'; // Mostrar total formateado
+            }
+        }
+
+        function proceedToPayment() {
+            const paymentOption = document.getElementById('payment-options').value;
+            if (!paymentOption) {
+                alert('Por favor, seleccione una opción de pago.');
+                return;
+            }
+            alert(`Procediendo al pago con ${paymentOption}. Total a pagar: ${document.getElementById('total-price').innerText}.`);
+            // Aquí puedes agregar la lógica para procesar el pago
+        }
+
+        // Mostrar el carrito al abrir el modal
+        document.getElementById('cartModal').addEventListener('show.bs.modal', showCart);
+    </script>
 </body>
 </html>
